<resources>
    <string name="app_name" translatable="false">Zic Events</string>
    <string name="welcome">Bienvenue</string>
    <string name="task_success" translatable="false">success</string>
    <string name="task_failure" translatable="false">fail</string>
    <string name="no_network_connectivity">Vérifier votre connexion internet puis réessayer</string>
    <string name="hint_next">Suivant</string>
    <string name="hint_password">Votre mot de passe</string>
    <string name="hint_email">Votre Adresse e-mail</string>
    <string name="hint_confirm_password">Confirmer votre mot de passe</string>
    <string name="hint_sign_in">Se connecter</string>
    <string name="hint_sign_up">S\' inscrire</string>
    <string name="hint_phone_number">Numéro de téléphone</string>
    <string name="hint_username">Nom d\' utilisateur</string>
    <string name="forgot_password_text">Mode de passe oublié ?</string>
    <string name="alt_login_text">Connecte toi avec</string>
    <string name="sign_up_text">Pas encore de compte ?</string>
    <string name="title_signIn">Connexion</string>
    <string name="title_signUp">Inscription</string>
    <string name="create_account">Créer mon compte</string>
    <string name="invalid_email">Addresse email invalide</string>
    <string name="invalid_password">Mode de passe invalide</string>
    <string name="invalid_password_confirmation">Correpondance de mot de passe invalide</string>
    <string name="sign_in_fail">Echec de l\'authentification</string>
    <string name="sign_in_canceled">Authentification annulée</string>
    <string name="email_already_used">Cette adresse est déjà utilisée</string>
    <string name="email_used_by_other_provider">Ce compte utilise un autre mode de connexion</string>
    <string name="user_disable">Ce compte est désactivé</string>
    <string name="invalid_user_password">Adresse email ou mot de passe invalide</string>
    <string name="incomplete_sign_in_account">Impossible d\' utiliser ce compte</string>
    <string name="fetching_user_error">Erreur lors de la récupération du profil</string>
    <string name="fetching_user_canceled">Action annulée</string>
    <string name="invalid_phone_number">Numéro de téléphone invalide</string>
    <string name="invalid_username_char">Votre nom d\'utilisateur doit comprendre au moins 3 lettres sans caratères spéciaux</string>
    <string name="invalid_pseudo">le pseudo ne peut</string>
    <string name="invalid_gender">Sélectionnez un genre</string>
    <string name="profile_creation_fail">Erreur lors de la création du profil</string>
    <string name="profile_creation_unreadable_email">Adresse email introuvable</string>
    <string name="profile_creation_cancel">Création du profil annulée</string>
    <string name="profile_update_fail">Oups ! Votre profil n\'a pu être mis à jour, réessayer plus tard</string>
    <string name="profile_update_cancel">Mise à jour  du profil annulée</string>
    <string name="incomplete_profile_info">Profil incomplet</string>
    <string name="send_reset_password_success">Un email de réinitialisation a été envoyé</string>
    <string name="send_reset_password_email_error">Adrresse email introuvable</string>
    <string name="send_reset_password_error">Erreur lors de l\'envoi du mail</string>
    <string name="send_reset_password_cancel">Demande annulée</string>
    <string name="fetch_user_publication_error">Erreur lors de la récupération de vos publications</string>
    <string name="fetch_user_publication_cancel">Récupération de vos publications annulée</string>
    <string name="store_image_task_error">Une erreur est survenue lors du chargement de l\'image, réessayer plus tard</string>
    <string name="store_image_task_cancel">Chargement de l\'image interrompu</string>
    <string name="title_search">Recherche</string>
    <string name="title_event">Evénements</string>
    <string name="title_publication">Publications</string>
    <string name="title_chat">Messages</string>
    <string name="title_account">Profil</string>
    <string name="facebook_app_id">572815233259134</string>
    <string name="fb_login_protocol_scheme">fb572815233259134</string>
    <string name="reset_password_title">Mot de passe oublié ?</string>
    <string name="reset_password_send">Envoyer</string>
    <string name="reset_password_message">Entrez votre adresse email, un lien contenant les instructions vous sera envoyé</string>
    <string name="send_reset_password_link">Envoi en cours</string>
    <string name="create_profile_gender">Genre</string>
    <string name="create_profile_username">Prénom &amp; Nom</string>
    <string name="create_profile_birthDate">Date de naissance</string>
    <string name="create_profile_phone">Numéro de téléphone</string>
    <string name="create_profile_gender_male_radio">Homme</string>
    <string name="create_profile_gender_female_radio">Femme</string>
    <string name="create_profile_gender_other_radio">Autre</string>
    <string name="create_profile_create_account">Finaliser mon Inscription</string>
    <string name="create_profile_title_message">Compléter votre profil pour finaliser votre incription</string>
    <string name="create_profile_dialog_message">Création du profil</string>
    <string name="update_profile_dialog_message">Mise à jour du profil</string>
    <string name="error_when_fetch_user">Une erreur est survenue lors de la récupération du profil</string>
    <string name="profile_update_user_info">Mettre à jour mes informations</string>
    <string name="profile_gallery_photo">Ma Gallery Photo</string>
    <string name="profile_last_publications">Mes Dernières Publications</string>
    <string name="profile_description_placeholder">Votre description …</string>
    <string name="profile_registration_date_placeholder">Membre depuis le </string>
    <string name="details_user_photo">Photos</string>
    <string name="details_user_last_publications">Dernières Publications</string>
    <string name="details_user_follow">Suivre</string>
    <string name="details_user_unfollow">Ne Plus Suivre</string>
    <string name="profile_menu_logout">Déconnexion</string>
    <string name="profile_menu_settings">Paramètres</string>
    <string name="profile_menu_edit_info">Modifier mon profil</string>
    <string name="profile_edit_title">Modification du Profil</string>
    <string name="profile_edit_cover">Ma Couverture</string>
    <string name="profile_edit_photo">Ma Photo</string>
    <string name="profile_edit_description">Ma Description</string>
    <string name="profile_edit_description_hint">Description</string>
    <string name="profile_edit_location">Mon Adresse</string>
    <string name="profile_edit_location_hint">Localisation</string>
    <string name="profile_edit_style">Mes Styles Musicaux</string>
    <string name="profile_edit_adding">Ajouter</string>
    <string name="profile_edit_dialog_save">Enregister</string>
    <string name="user_description_error">Votre description doit contenir entre 20 et 150 caractères</string>
    <string name="profile_edit_style_hint">Style de musique</string>
    <string name="profile_up_to_date">Profil mis à jour</string>
    <string name="empty_publication_placeholder_title">Aucune publication pour le moment</string>
    <string name="empty_publication_placeholder_subtitle">Vous trouvez ici, vos publications ainsi que celles des personnes que vous suivez.</string>
    <string name="empty_publication_placeholder_button">Rechercher des personnes</string>
    <string name="fetching_publication_error">Une erreur est survenue lors de la récupération de vos publications</string>
    <string name="post_publication_error">Une erreur est survenue lors de la publication de votre message</string>
    <string name="empty_publication_message">Vous devez ajouter un message</string>
    <string name="publication_creation">Création de la publication</string>
    <string name="storage_permission_denied">Vous devez autoriser l\'accès à vos Photos/Vidéo pour utiliser cette fonctionnalité</string>
    <string name="location_permission_denied">Vous devez autoriser l\'accès à votre Position pour utiliser cette fonctionnalité</string>
    <string name="device_position_error">Oups ! Impossible de récupérer votre position</string>
    <string name="geocoding_address_error">Récupération de l\'addresse impossible</string>
    <string name="geocoding_position_error">Récupération de la position impossible</string>
    <string name="operation_canceled">Opération annulée</string>
    <string name="geocoding_address_no_result">Aucun résultat pour cette adresse, réessayer avec une autre adresse proche</string>
    <string name="geocoding_empty_text">Merci de renseigner une adresse</string>
    <string name="geocoding_enough_text">Cette adresse est trop courte, merci de donne un peu plus de précision</string>
    <string name="alert_valid_address_title">Votre Adresse</string>
    <string name="alert_valid_address_positive_btn">Valider</string>
    <string name="alert_valid_address_negative_btn">Annuler</string>
    <string name="search_user_hint">Rechecher une personne …</string>
    <string name="search_user_no_results">Aucun résultat trouvé …</string>
    <string name="artist_search_query_hint">Rechercher un Artiste</string>
    <string name="location_search_query_hint">Rechercher un Lieu</string>
    <string name="artist_search_no_result">Aucun resultat pour cette recherche. Essayez avec un autre artiste.</string>
    <string name="location_search_no_result">Aucun resultat pour cette recherche. Essayez avec un autre lieu.</string>
    <string name="event_search_no_result">Aucun Concert ou Festival près de cette position. Essayer avec un autre lieu.</string>
    <string name="event_request_error">Une erreur est survenue lors de la récupération des données</string>
    <string name="nearby_position_hint">À Proximité</string>
    <string name="detail_event_fragment_title">Détail de l\' évenement</string>
    <string name="canceled_event_hint">annulé</string>
    <string name="artist_hint">Artiste</string>
    <string name="location_hint">Lieu</string>
    <string name="route_hint">Itinéraire</string>
    <string name="artist_fragment_upcoming_event_hint">Evénements à venir</string>
    <string name="artist_fragment_null_artist">Impossible d\'afficher les informations de cet Artiste</string>
    <string name="artist_fragment_no_result">Aucune date n\'est encore programmée pour cet Artiste.</string>
    <string name="artist_request_error">Une erreur est survenue lors de la récupération des données</string>
    <string name="gender_male_value" translatable="false">male</string>
    <string name="gender_female_value" translatable="false">female</string>
    <string name="gender_other_value" translatable="false">other</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>