<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.publication.EmptyPublicationPlaceholder">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_style_black_24dp"
            android:tint="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/empty_publication_placeholder_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@id/icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/empty_publication_placeholder_subtitle"
            android:textAlignment="center"
            android:layout_below="@id/title"
            android:textColor="@color/shadowColorText"
            android:layout_marginBottom="45dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/empty_publication_placeholder_button"
            android:background="@drawable/rounded_corner_background"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_below="@id/message"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"/>

    </RelativeLayout>

</FrameLayout>